[package]
name = "onestop"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Time code and aggregate across multiple contexts/threads. Other things too?"
repository = "https://github.com/randomouscrap98/onestop-rust"
readme = "README.md"
keywords = ["stopwatch","duration","instant","profiling","timer"]
categories = ["development-tools","development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.5.9", optional = true }

[features]
utils = [
    "dep:serde",
    "dep:toml"
]